--- a/src/main/resources/templates/afficher-patients.html
+++ b/src/main/resources/templates/afficher-patients.html
@@ -31,5 +31,6 @@
             </tr>
         </tbody>
     </table>
+        <a th:href="@{/ajouter-patient}" class="btn btn-primary">Ajouter un Patient</a>
 </body>
 </html>
