--- a/src/main/resources/templates/afficher-details.html
+++ b/src/main/resources/templates/afficher-details.html
@@ -2,53 +2,56 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Détails du Patient</title>
+	<meta charset="UTF-8">
+	<title>Détails du Patient</title>
 </head>
 
 <body>
-    <h1>Détails du Patient</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Prénom</th>
-                <th>Nom</th>
-                <th>Date de Naissance</th>
-                <th>Genre</th>
-                <th>Adresse postale</th>
-                <th>Numéro de Téléphone</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td th:text="${patient.id}"></td>
-                <td th:text="${patient.prenom}"></td>
-                <td th:text="${patient.nom}"></td>
-                <td th:text="${#dates.format(patient.dateNaissance, 'yyyy-MM-dd')}"></td>
-                <td th:text="${patient.genre}"></td>
-                <td th:text="${patient.adressePostale}"></td>
-                <td th:text="${patient.numeroTelephone}"></td>
-            </tr>
-        </tbody>
-    </table>
+	<h1>Détails du Patient</h1>
+	<table>
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>Prénom</th>
+				<th>Nom</th>
+				<th>Date de Naissance</th>
+				<th>Genre</th>
+				<th>Adresse postale</th>
+				<th>Numéro de Téléphone</th>
+				<th th:if="${!isOrganisateur}">Niveau de Risque de Diabète</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td th:text="${patient.id}"></td>
+				<td th:text="${patient.prenom}"></td>
+				<td th:text="${patient.nom}"></td>
+				<td th:text="${#dates.format(patient.dateNaissance, 'yyyy-MM-dd')}"></td>
+				<td th:text="${patient.genre}"></td>
+				<td th:text="${patient.adressePostale}"></td>
+				<td th:text="${patient.numeroTelephone}"></td>
+				<td th:if="${!isOrganisateur}" th:text="${diabetesRisk}"></td>
+			</tr>
+		</tbody>
+	</table>
 
-    <!-- Lien vers la page de modification d'adresse et de numéro de téléphone pour ORGANISATEUR -->
-    <div th:if="${isOrganisateur}" sec:authorize="hasRole('ROLE_ORGANISATEUR')">
-        <a th:href="@{'/modifier-adresse/' + ${patient.id}}">Modifier l'adresse postale</a>
-        <br>
-        <a th:href="@{'/modifier-numero/' + ${patient.id}}">Modifier le numéro de téléphone</a>
-    </div>
+	<!-- Lien vers la page de modification d'adresse et de numéro de téléphone pour ORGANISATEUR -->
+	<div th:if="${isOrganisateur}" sec:authorize="hasRole('ROLE_ORGANISATEUR')">
+		<a th:href="@{'/modifier-adresse/' + ${patient.id}}">Modifier l'adresse postale</a>
+		<br>
+		<a th:href="@{'/modifier-numero/' + ${patient.id}}">Modifier le numéro de téléphone</a>
+	</div>
 
-    <!-- Lien vers la page d'ajout de note médicale pour PRATICIEN -->
-    <div th:if="${not isOrganisateur}" sec:authorize="hasRole('ROLE_PRATICIEN')">
-        <a th:href="@{'/ajouter-note/' + ${patient.id}}">Ajouter une note médicale</a>
+	<!-- Lien vers la page d'ajout de note médicale pour PRATICIEN -->
+	<div th:if="${not isOrganisateur}" sec:authorize="hasRole('ROLE_PRATICIEN')">
+		<a th:href="@{'/ajouter-note/' + ${patient.id}}">Ajouter une note médicale</a>
 
-        <h2>Notes Médicales</h2>
+		<h2>Notes Médicales</h2>
 
-        <ul th:each="note : ${medecinNotes}">
-            <li th:text="${note.note}"></li>
-        </ul>
-    </div>
+		<ul th:each="note : ${medecinNotes}">
+			<li th:text="${note.note}"></li>
+		</ul>
+	</div>
 </body>
+
 </html>
